tests/baselines/reference/for-inStatementsArrayErrors.errors.txt
tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts(4,16): error TS7015: Element implicitly has an 'any' type because index expression is not of type 'number'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts(5,16): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts(6,9): error TS2365: Operator '===' cannot be applied to types '文字' and '数字'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts(8,16): error TS2339: Property 'unknownProperty' does not exist on type '文字'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts(12,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'i' must be of type '数字', but here has type '文字'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts(16,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'j' must be of type '任意', but here has type '文字'.


==== tests/cases/conformance/statements/for-inStatements/for-inStatementsArrayErrors.ts (6 errors) ====
    let a: Date[];
    
    for (let x in a) {
        let a1 = a[x + 1];
                   ~~~~~
!!! error TS7015: Element implicitly has an 'any' type because index expression is not of type 'number'.
        let a2 = a[x - 1];
                   ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        if (x === 1) {
            ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '文字' and '数字'.
        }
        let a3 = x.unknownProperty;
                   ~~~~~~~~~~~~~~~
!!! error TS2339: Property 'unknownProperty' does not exist on type '文字'.
    }
    
    var i: number;
    for (var i in a ) {
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'i' must be of type '数字', but here has type '文字'.
    }
    
    var j: any;
    for (var j in a ) {
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'j' must be of type '任意', but here has type '文字'.
    }
    